@@ -17,14 +17,15 @@ Version 2.19
   15532, 15593, 15601, 15608, 15609, 15610, 15632, 15640, 15670, 15672,
   15680, 15681, 15723, 15734, 15735, 15736, 15748, 15749, 15754, 15760,
   15763, 15764, 15797, 15799, 15825, 15843, 15844, 15846, 15847, 15849,
-  15855, 15856, 15857, 15859, 15867, 15886, 15887, 15890, 15892, 15893,
-  15895, 15897, 15901, 15905, 15909, 15915, 15917, 15919, 15921, 15923,
-  15939, 15941, 15948, 15963, 15966, 15985, 15988, 15997, 16032, 16034,
-  16036, 16037, 16038, 16041, 16055, 16071, 16072, 16074, 16077, 16078,
-  16103, 16112, 16143, 16144, 16146, 16150, 16151, 16153, 16167, 16172,
-  16195, 16214, 16245, 16271, 16274, 16283, 16289, 16293, 16314, 16316,
-  16330, 16337, 16338, 16356, 16365, 16366, 16369, 16372, 16375, 16379,
-  16384, 16385, 16386, 16387, 16390, 16394, 16400, 16407, 16408, 16414.
+  15850, 15855, 15856, 15857, 15859, 15867, 15886, 15887, 15890, 15892,
+  15893, 15895, 15897, 15901, 15905, 15909, 15915, 15917, 15919, 15921,
+  15923, 15939, 15941, 15948, 15963, 15966, 15985, 15988, 15997, 16032,
+  16034, 16036, 16037, 16038, 16041, 16055, 16071, 16072, 16074, 16077,
+  16078, 16103, 16112, 16133, 16143, 16144, 16146, 16150, 16151, 16153,
+  16167, 16172, 16195, 16214, 16245, 16271, 16274, 16283, 16289, 16293,
+  16314, 16316, 16330, 16337, 16338, 16356, 16365, 16366, 16369, 16372,
+  16375, 16379, 16384, 16385, 16386, 16387, 16390, 16394, 16400, 16407,
+  16408, 16414.
 
 * Slovenian translations for glibc messages have been contributed by the
   Translation Project's Slovenian team of translators.
